samples/_failures_safe/1761636943_ba1127_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f910bf12.c: In function ‘matrix_subtract’:
./samples/SAFE/__tmp_f910bf12.c:165:33: error: expected ‘;’ at end of input
  165 |         result->data[i] = malloc
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_f910bf12.c:165:9: error: expected declaration or statement at end of input
  165 |         result->data[i] = malloc
      |         ^~~~~~
./samples/SAFE/__tmp_f910bf12.c:165:9: error: expected declaration or statement at end of input
